<resources>
    <string name="app_name">Aidi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="home">Home</string>
    <string name="fav">Favourite</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
</resources>
